<resources>
    <string name="app_name">TestWeather</string>
    <string name="city">Город:</string>
    <string name="type_city">Тип Города:</string>
    <string name="season">Сезон:</string>
    <string name="temperature_per_season">Средняя температура за сезон:</string>
    <string name="settings">Настройки</string>
    <string name="city_number_1">Город № 1</string>
    <string name="spring">Весна</string>
    <string name="spring_1">Весну</string>
    <string name="summer">Лето</string>
    <string name="autumn">Осень</string>
    <string name="winter">Зима</string>
    <string name="winter_1">Зиму</string>
    <string name="add_name_city">Введите название города</string>
    <string name="name_city">Название города</string>
    <string name="to_change">Изменить</string>
    <string name="small">Маленький</string>
    <string name="medium">Средний</string>
    <string name="large">Большой</string>
    <string name="add_city">Добавить Город</string>
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>
    <string name="the_city_has_not_been_added_yet">Город ещё не добавлен</string>
    <string name="add">Добавить</string>
    <string name="type_of_temperature">Отобображать температуру в:</string>
    <string name="celsius">Цельсиях</string>
    <string name="kelvin">Кельвинах</string>
    <string name="fahrenheit">Фаренгейтах</string>
    <string name="type_of_season">Средняя температура за :</string>
    <string name="the_city_has_not_been">Город ещё не добавлен</string>
    <string name="season_size">Количество добавленных сезонов:</string>
    <string name="city_name_is_empty">"Заполинте графу имя города!"</string>
    <string name="season_name_is_empty">"Выберите сезон"</string>
    <string name="temperature_is_empty">"Установите температуру"</string>
</resources>